# OPAL

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  doxygen.css  graph_legend.html  index.html
.github/workflows/: doxygen.yml
2021.1/: Doxyfile  dir_000001_000006.html  dir_000003_000018.html  dir_000004_000012.html  dir_000004_000018.html  dir_000005_000007.html  dir_000005_000009.html  dir_000005_000018.html  dir_000006_000009.html  dir_000006_000018.html  dir_000007_000008.html  dir_000007_000018.html  dir_000008_000018.html  dir_000009_000011.html  dir_000010_000007.html  dir_000010_000008.html  dir_000010_000018.html  dir_000012_000004.html  dir_000012_000007.html  dir_000012_000011.html  dir_000012_000015.html  dir_000012_000017.html  dir_000012_000018.html  dir_000014_000011.html  dir_000015_000003.html  dir_000015_000005.html  dir_000015_000011.html  dir_000016_000009.html  dir_000016_000014.html  dir_000017_000007.html  dir_000017_000014.html  dir_000017_000016.html  dir_000018_000004.html  dir_000018_000007.html  dir_000018_000009.html  dir_000018_000011.html  dir_000024_000025.html  dir_000024_000026.html  dir_000026_000024.html  dir_000026_000027.html  (+1874 more)
2021.1/src/: OPALconfig.h  OPALrevision.h
2021.1/tests/: OpalSourcePath.h
2022.1/: annotated.html  classes.html  dir_000001_000006.html  dir_000002_000012.html  dir_000003_000011.html  dir_000003_000014.html  dir_000003_000018.html  dir_000004_000007.html  dir_000004_000011.html  dir_000004_000012.html  dir_000004_000018.html  dir_000005_000007.html  dir_000005_000008.html  dir_000005_000009.html  dir_000005_000018.html  dir_000006_000007.html  dir_000006_000008.html  dir_000006_000009.html  dir_000006_000018.html  dir_000007_000003.html  dir_000007_000004.html  dir_000007_000008.html  dir_000007_000009.html  dir_000007_000010.html  dir_000007_000011.html  dir_000007_000014.html  dir_000007_000016.html  dir_000007_000018.html  dir_000008_000005.html  dir_000008_000007.html  dir_000008_000009.html  dir_000008_000010.html  dir_000008_000011.html  dir_000008_000018.html  dir_000009_000007.html  dir_000009_000008.html  dir_000009_000011.html  dir_000009_000014.html  dir_000009_000018.html  dir_000010_000003.html  (+3797 more)
2024.1/: annotated.html  classes.html  dir_000001_000006.html  dir_000002_000012.html  dir_000003_000011.html  dir_000003_000014.html  dir_000003_000018.html  dir_000004_000007.html  dir_000004_000011.html  dir_000004_000012.html  dir_000004_000018.html  dir_000005_000007.html  dir_000005_000008.html  dir_000005_000009.html  dir_000005_000018.html  dir_000006_000007.html  dir_000006_000008.html  dir_000006_000009.html  dir_000006_000018.html  dir_000007_000003.html  dir_000007_000004.html  dir_000007_000008.html  dir_000007_000009.html  dir_000007_000010.html  dir_000007_000011.html  dir_000007_000014.html  dir_000007_000016.html  dir_000007_000018.html  dir_000008_000005.html  dir_000008_000007.html  dir_000008_000009.html  dir_000008_000010.html  dir_000008_000011.html  dir_000008_000018.html  dir_000009_000007.html  dir_000009_000008.html  dir_000009_000011.html  dir_000009_000014.html  dir_000009_000018.html  dir_000010_000003.html  (+3789 more)
CMakeModules/: FindMITHRA.cmake
OPAL-FEL-TESTS/: ReadMe
OPAL-FEL-TESTS/S2EFEL/: .RFphotoinjector.tmpl  calc_sigma.py  initial-profile.tsv  reduced.job  run.merlin5  run.merlin6  s2efel.h5  s2efel.in  s2efel.lbal  s2efel.mem  s2efel.stat  s2efel_original.in  slurm-134493930.out  slurm-134583640.out  slurm-18257.out  slurm-386503.out  slurm-396603.out  slurm-454608.out  slurm-457447.out
OPAL-FEL-TESTS/SCundulator_tests/: run.merlin6  s2efel.h5  s2efel.in  (+4 more)
examples-OPAL-FEL/: plotting.ipynb  und.in  undulator_output.job
master/: annotated.html  classes.html  dir_000008_000013.html  dir_000009_000019.html  dir_000010_000018.html  dir_000010_000021.html  dir_000010_000025.html  dir_000011_000014.html  dir_000011_000018.html  dir_000011_000019.html  dir_000011_000025.html  dir_000012_000014.html  dir_000012_000015.html  dir_000012_000016.html  dir_000012_000025.html  dir_000013_000014.html  dir_000013_000015.html  dir_000013_000016.html  dir_000013_000025.html  dir_000014_000010.html  dir_000014_000011.html  dir_000014_000015.html  dir_000014_000016.html  dir_000014_000017.html  dir_000014_000018.html  dir_000014_000021.html  dir_000014_000023.html  dir_000014_000025.html  dir_000015_000012.html  dir_000015_000014.html  dir_000015_000016.html  dir_000015_000017.html  dir_000015_000018.html  dir_000015_000025.html  dir_000016_000014.html  dir_000016_000015.html  dir_000016_000018.html  dir_000016_000021.html  dir_000016_000025.html  dir_000017_000010.html  (+3865 more)
optimizer/: CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  addToDoxygenMainPage.h  opal.cpp
src/PyOpal/: CMakeLists.txt  ExceptionTranslation.cpp  ExceptionTranslation.h  Globals.cpp  Globals.h  PyBindField.cpp  PyField.cpp  PyField.h  PyParser.cpp  PyParser.h  __init__.py
src/PyOpal/PyCore/: ExceptionTranslation.cpp  ExceptionTranslation.h  Globals.cpp  Globals.h  PyOpalObject.cpp  PyOpalObject.h
src/PyOpal/PyElements/: CMakeLists.txt  PyAbstractTimeDependence.h  PyAsymmetricEnge.cpp  PyEndFieldModel.h  PyEnge.cpp  PyGlobalCartesianOffset.cpp  PyLocalCartesianOffset.cpp  PyMultipoleT.cpp  PyOpalElement.cpp  PyOutputPlane.cpp  PyPolynomialTimeDependence.cpp  PyProbe.cpp  PyRingDefinition.cpp  PyScalingFFAMagnet.cpp  PySinusoidalTimeDependence.cpp  PySplineTimeDependence.cpp  PyVariableRFCavity.cpp  PyVariableRFCavityFringeField.cpp  PyVerticalFFAMagnet.cpp
src/PyOpal/PyObjects/: CMakeLists.txt  PyBeam.cpp  PyDistribution.cpp  PyField.cpp  PyFieldSolver.cpp  PyLine.cpp  PyLine.h  PyNDGrid.cpp  PyOption.cpp  PyParser.cpp  PyPolynomialCoefficient.cpp  PyPolynomialCoefficient.h  PyPolynomialPatch.cpp  PyPolynomialPatch.h  PySquarePolynomialMap.cpp  PySquarePolynomialMap.h  PyTrackCmd.cpp  PyTrackRun.cpp
src/PyOpal/PyPython/: CMakeLists.txt  _ffa_field_mapper.py  encapsulated_test_case.py  ffa_field_mapper.py  minimal_runner.py
tests/: CMakeLists.txt  Main.cpp
tools/mslang/: CMakeLists.txt  mslang.cpp
(+93964 files in other folders)
